Fixed #258 pointer cursor for author overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,3 +110,6 @@ header {overflow-x: hidden;} /* prevent horizontal scrollbar (caused by Slick's 
   display: inline-block;
 }
 
+#moreMobile {
+  cursor: pointer;
+}
